--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1772,9 +1772,6 @@ ul {
     text-align: center;
     align-items: center;
     z-index: 2;
-    position: absolute;
-    left: 0;
-    right: 0;
     padding: 20px;
     letter-spacing: .1em;
     font-weight: 100;
@@ -1784,9 +1781,7 @@ ul {
     font-size: 2.5vh;
     line-height: normal;
     width: 100%;
-    margin: auto;
     letter-spacing: 0;
-    top: 20%
 }
 
 h6.svelte-cadtdl {
@@ -1802,12 +1797,11 @@ h6.svelte-cadtdl {
 
 .light-box.svelte-cadtdl {
     height: 100vh;
-    position: absolute;
+    /* position: absolute; */
     width: auto;
     background-color: rgba(1, 1, 1, .95);
     z-index: 100;
     top: 0;
-    margin: auto;
     padding: 0 20px 20px;
     left: 0;
     right: 0
